# terrain-rendering

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui  terrain.sln  terrain.vcxproj  terrain.vcxproj.filters  terrain_rendering.sln  terrain_rendering.vcxproj  terrain_rendering.vcxproj.filters
dependencies/warmerda/bld/lib/: gdal_i.lib
scenes/: 3Dtest.json  dummy-test.json
scenes/test-scene/: scene.json
src/: main.cpp
src/common/: const.h  json.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
src/scene/accelerator/: Accelerator.cpp  Accelerator.h  LOD.cpp  LOD.h  Plain.cpp  Plain.h
src/scene/camera/: Camera.cpp  Camera.h  CameraListener.cpp  CameraListener.h
src/scene/common/: Movable.cpp  Movable.h
src/scene/element/: Element.cpp  Element.h  Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h
src/scene/signal/: CameraListener.cpp  CameraListener.h
src/ui/: OpenGLDisplayWidget.cpp  OpenGLDisplayWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: 源.cpp
test/x64/Debug/: test.exe.recipe  test.ilk  vc142.idb
test/x64/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
